--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
@@ -29,6 +30,7 @@
     "mongoose": "^6.2.2",
     "morgan": "^1.10.0",
     "order-id": "^2.1.2",
+    "qrcode": "^1.5.0",
     "uuid": "^8.3.2"
   }
 }
