--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "mongoose": "^6.2.2",
     "morgan": "^1.10.0",
     "order-id": "^2.1.2",
+    "paypal-rest-sdk": "^1.8.1",
     "qrcode": "^1.5.0",
+    "seatsio": "^67.8.0",
     "uuid": "^8.3.2"
   }
 }
