--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
+    "certbot": "^5.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.0",
     "mongodb-memory-server": "^8.3.0",
