--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "morgan": "^1.10.0",
     "order-id": "^2.1.2",
     "qrcode": "^1.5.0",
+    "seatsio": "^67.8.0",
     "uuid": "^8.3.2"
   }
 }
