--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/agiball/awsapi#readme",
   "dependencies": {
     "@shopify/shopify-api": "^5.0.0",
+    "aws-sdk": "^2.1185.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "certbot": "^5.0.3",
@@ -34,6 +35,7 @@
     "mongodb-memory-server": "^8.3.0",
     "mongoose": "^6.2.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.7",
     "order-id": "^2.1.2",
     "puppeteer": "^14.4.1",
     "qrcode": "^1.5.0",
