--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fs": "^0.0.1-security",
     "handlebars": "^4.7.7",
     "helmet": "^5.0.2",
+    "html": "^1.0.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.0",
